--- a/src/config.yaml
+++ b/src/config.yaml
@@ -9,9 +9,9 @@ site:
 # Default SEO metadata
 metadata:
   title:
-    default: AstroWind
+    default: YATA
     template: '%s — AstroWind'
-  description: "\U0001F680 Suitable for Startups, Small Business, Sass Websites, Professional Portfolios, Marketing Websites, Landing Pages & Blogs."
+  description: "\U0001F680 Yet another todo app, intelligently working to make life easy."
   robots:
     index: true
     follow: true
